# email-attachment-monitor

./: .gitignore  README.md  config.example.json  email-monitor.spec  pyproject.toml
docs/superpowers/specs/: 2026-06-08-email-monitor-design.md
scripts/: sample_processor.py
src/email_monitor/: __init__.py  app.py  cli.py  command_runner.py  config.py  db.py  mail_client.py  models.py  organizer.py  pipeline.py  rules.py  scheduler.py  tasks.py  transform.py  validation.py
src/email_monitor/templates/: base.html  logs.html  rules.html  status.html  tasks.html  templates.html
tests/: conftest.py  test_command_runner.py  test_config_and_mail_errors.py  test_db_pipeline_web.py  test_organizer.py  test_rules.py  test_tasks.py  test_transform.py  test_validation.py
